# distributed-task-orchestrator

./: CMakeLists.txt  PRD.md  README.md
client/: main.cpp
common/: utils.h
coordinator/: main.cpp  metrics.h  scheduler.h  services.cpp  services.h  task_store.h  worker_pool.h
proto/: orchestrator.proto
worker/: main.cpp
